@@ -7,7 +7,6 @@ lib/CAD/Mesh3D/STL.pm
 LICENSE
 Makefile.PL
 MANIFEST			This list of files
-patch/attemptWinPatch.pl
 patch/STL.pm
 README.md
 t/00-use.t
